# skillport0

./: .gitignore  .repo-context.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIRST_SESSION_PROMPTS.md  GETTING_STARTED.md  KNOWN_LIMITATIONS.md  LICENSE-MIT  README.md  RELEASING.md  action.yml  app.just  deny.toml  justfile
.github/: TEMPLATE_README.md
.github/workflows/: ci.yml  example-usage.yml  release.yml
decisions/: DEC-001-not-a-converter.md  DEC-002-open-spec-authoritative.md  DEC-003-severity-discipline.md  DEC-004-build-for-reuse.md  DEC-005-rust-static-binary-stable-output.md  DEC-006-provenance-hash-anchored.md  DEC-007-yaml-and-ordered-map-deps.md  DEC-008-clap-serde-json-cli-deps.md  DEC-010-tiktoken-rs-body-size-tokenizer.md
docs/: ROADMAP.md  USAGE.md  WORKFLOW.md  api-contract.md  architecture.md  data-model.md  schema-reference.md  signals.md
docs/blog/: 2026-07-06-dogfood-lessons-outline.md
docs/decisions/: DEC-001-interface-contract.md  DEC-003-patch-lane.md  DEC-004-subagent-execution-mode.md  DEC-005-agent-portability.md  DEC-006-release-spec-template.md  (+4 more)
feedback/: 2026-07-03-crustyimg-proj-001.md  2026-07-03-zany-animal-slots-proj-001.md  2026-07-04-bragfile-three-project-retro.md
guidance/: constraints.yaml  questions.yaml  recommended-tools.md  signals.yaml  toolchain-brief.md
initial_stuff/: Cargo.toml  README.md  emit.rs  lint.rs  main.rs  parse.rs  profiles.rs  skill.rs  skillport-kickoff-prompt.md  skillport-spec-driven-seed.md
reports/: competitive-agnix.md  pivot-discovery.md
scripts/: _lib.sh  advance-cycle.sh  archive-patch.sh  archive-spec.sh  build-info.sh  constraints-view.sh  cost-audit.sh  dash.sh  decisions-audit.sh  decisions-view.sh  handoffs-view.sh  install-release.sh  lifetime-report.sh  new-patch.sh  new-spec.sh  new-stage.sh  next-version.sh  patches-view.sh  questions-view.sh  report_daily.sh  report_weekly.sh  roadmap.sh  signals-view.sh  status.sh  template-version.sh  test.sh  validate.sh
src/: emit.rs  lib.rs  main.rs  parse.rs  report.rs  rules.rs  skill.rs  walk.rs
tests/: cli.rs
(+123 files in other folders)
